# tokencheck-subscriptions

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  env.example
.github/workflows/: deploy-to-cloud-run.yml
api_auth/: Cargo.toml  README.md
api_auth/src/: lib.rs
api_auth/src/dtos/: auth.rs
api_auth/src/middleware/: auth.rs
api_auth/src/misc/: oauth.rs
api_auth/src/routes/: auth.rs  session.rs  user.rs
api_auth/src/services/: auth.rs  user.rs
api_keys/: Cargo.toml  README.md
api_keys/src/: lib.rs
api_keys/src/dtos/: key.rs  usage.rs
api_keys/src/middleware/: key.rs
api_keys/src/routes/: key.rs  usage.rs
api_keys/src/service/: key.rs  usage.rs
api_subs/: Cargo.toml  README.md
api_subs/src/: lib.rs
api_subs/src/dtos/: sub.rs
api_subs/src/misc/: pay.rs
api_subs/src/models/: sub.rs
api_subs/src/routes/: pay.rs  sub.rs
api_subs/src/services/: pay.rs  sub.rs
checker/: Cargo.toml
checker/src/: lib.rs
common/: Cargo.toml  README.md
common/src/: env_config.rs  error.rs  jwt.rs  key.rs  lib.rs  misc.rs  stripe.rs
core/: Cargo.toml  README.md
core/src/: cors.rs  main.rs  redis.rs
db/: Cargo.toml  README.md
db/.sqlx/: query-14e2e4765bfe8d7bb63186fa5f9879e32df9077123c812834da3b10ae10100d8.json  query-3c3b401b46a4539be368201065123e7b4425d63c6760b6cfb3202c293ebccbbd.json  query-51f030a5289fd9581d87a6734754f6b5df02c8b67c6170bda245342a35521a19.json  query-6c867994efb25cee372639b3c765175dfbc11bf79d39e8b92e65dc1997c8e9b0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-9474317f22d9eb77634f16ec8d8e8320cf2bb9ee589db19ec33ee8b6a20eb776.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
db/migrations/: 20250314081218_users.down.sql  20250314081218_users.sql  20250314083938_subs.down.sql  20250314083938_subs.sql  20250314085308_api.down.sql  20250314085308_api.sql  20250314090226_logs.sql  20250316145005_alter_log_user_ref.down.sql  20250316145005_alter_log_user_ref.up.sql  20250317162344_alter_user_subscriptions_pkey.down.sql  20250317162344_alter_user_subscriptions_pkey.up.sql  20250318123616_alter_sub_price_type.down.sql  20250318123616_alter_sub_price_type.up.sql  20250327123550_add_stripe_customer_id_to_users.down.sql  20250327150949_remove_subs_and_usersubs_tables.down.sql  20250409153609_rename_key_hashed_to_key_encrypted.down.sql  20250409153609_rename_key_hashed_to_key_encrypted.up.sql  20250414142105_add_stripe_customer_id_to_users.down.sql  20250414142105_add_stripe_customer_id_to_users.up.sql  20250414142323_remove_subs_usersubs_tables.down.sql  20250414142323_remove_subs_usersubs_tables.up.sql  20250414144347_remove_api_usage_tables.down.sql  20250414144347_remove_api_usage_tables.up.sql  20250414145323_remove_last_used_from_key.down.sql  20250414145323_remove_last_used_from_key.up.sql  20250415094038_add_key_id_to_logs.down.sql  20250415094038_add_key_id_to_logs.up.sql
db/src/: key.rs  lib.rs  log.rs  user.rs
db/src/dtos/: key.rs  log.rs  usage.rs  user.rs
db/src/models/: api.rs  key.rs  log.rs  user.rs
extractor/: Cargo.toml  README.md
extractor/src/: lib.rs
extractor/src/middleware/: extractor.rs
limiter/: Cargo.toml  README.md
limiter/src/: lib.rs
limiter/src/middleware/: global.rs  quota.rs  user.rs
logger/: Cargo.toml  README.md
logger/src/: lib.rs  middleware.rs
logger/src/middleware/: logger.rs
src/: lib.rs  main.rs
src/api_subs/: README.md  mount.rs
src/api_subs/dtos/: pay.rs  sub.rs
src/api_subs/misc/: pay.rs
src/api_subs/models/: sub.rs
src/api_subs/routes/: mod.rs  pay.rs  server_calls.rs  sub.rs
src/api_subs/services/: pay.rs  sub.rs
src/auth/: README.md
src/auth/middleware/: auth.rs  validate_api_key.rs
src/auth/services/: auth_client.rs
src/common/: README.md  env_config.rs  http.rs  jwt.rs  misc.rs  stripe.rs
src/db/: README.md  log.rs  mod.rs
src/db/models/: log.rs
src/logger/: README.md  middleware.rs  mod.rs
