[package]
name = "tokencheck-subscriptions"
version = "0.1.0"
edition = "2024"
default-run = "tokencheck-subscriptions"

[dependencies]
actix-web = { version = "4.10.2", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-cors = "0.7.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "bigdecimal",
  "ipnetwork",
] }
tokio = { version = "1.44.0", features = ["full"] }
argon2 = "0.5.3"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
colored = "3.0.0"
oauth2 = "5.0.0"
anyhow = "1.0.87"
reqwest = { version = "0.12", features = ["json"] }
env_logger = "0.11.7"
log = "0.4.26"
thiserror = "2.0.12"
fern = { version = "0.7.1", features = ["colored"] }
async-stripe = { version = "0.40.2", features = ["runtime-tokio-hyper"] }
url = "2.5.4"
