[package]
name = "api_keys"
version = "0.1.0"
edition = "2024"

[dependencies]
api_subs = { path = "../api_subs" }
common = { path = "../common" }
db = { path = "../db" }
actix-web = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
argon2 = { workspace = true }
