[package]
name = "api_subs"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
async-stripe = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
actix-web = { workspace = true }
actix-session = { workspace = true }
