[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
async-stripe = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
uuid = {workspace = true }