[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
log = { workspace = true }
url = { workspace = true }
logger = { path = "../logger" }
common = { path = "../common" }
db = { path = "../db" }
api_subs = { path = "../api_subs" }
api_auth = { path = "../api_auth" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
