[package]
name = "logger"
version = "0.1.0"
edition = "2024"

[dependencies]

db = { path = "../db" }
common = { path = "../common" }

actix-web = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
jsonwebtoken = { workspace = true }
fern = { workspace = true }
